Fix #5287 - Change secret field is too short

--- a/themes/SuiteP/css/suitep-base/editview.scss
+++ b/themes/SuiteP/css/suitep-base/editview.scss
@@ -3758,6 +3758,9 @@ select#sales_stage_advanced {
     width: 45%;
   }
 
+  .col-sm-12 .col-sm-8.edit-view-field input[type="password"] {
+    width: 45%;
+  }
 
   .col-sm-12 [type=varchar].col-sm-8.edit-view-field input[type="text"] {
     width: 45%;
@@ -3815,6 +3818,10 @@ select#sales_stage_advanced {
 
   .col-sm-12 [type=varchar].col-sm-8.edit-view-field input[type="text"] {
     width: 45.0%;
+  }
+
+  .col-sm-12 .col-sm-8.edit-view-field input[type="password"] {
+    width: 45%;
   }
 
   .col-sm-12 .edit-view-field input[type="text"] {
@@ -3879,6 +3886,10 @@ select#sales_stage_advanced {
 
   .col-sm-12 [type=varchar].col-sm-8.edit-view-field input[type="text"] {
     width: 45.0%;
+  }
+
+  .col-sm-12 .col-sm-8.edit-view-field input[type="password"] {
+    width: 45%;
   }
 
   .col-sm-6 .edit-view-field input[type="text"] {
